--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,15 @@
 # Note: This is only used by command line
 ###############################################################################
 #*.cs     diff=csharp
+*.c crif diff
+*.cc crif diff
+*.cxx crif diff
+*.cpp crif diff
+*.c++ crif diff
+*.hpp crif diff
+*.h crif diff
+*.h++ crif diff
+*.hh crif diff
 
 ###############################################################################
 # Set the merge driver for project and solution files
